<resources>
    <string name="app_name">guide</string>
    <string name="city_guide">城市攻略</string>

    <string name="activity_main_tab_home">主页</string>
    <string name="activity_main_tab_found">发现</string>
    <string name="activity_main_tab_mine">我的</string>
    <string name="activity_main_tab_search">搜索</string>

    <string name="category_social">社会保障</string>
    <string name="category_credential">证件办理</string>
    <string name="category_education">教育就业</string>
    <string name="category_wedding">婚育</string>
    <string name="category_transport">房屋交通</string>
    <string name="category_other">其他</string>

    <!-- Search Fragment -->
    <string name="fragment_search_sort">排序</string>
    <string name="fragment_search_history">历史搜索词</string>
    <string name="fragment_search_clear">清除</string>
    <string name="fragment_search_empty">没有搜索到</string>
    <string name="fragment_search_hint">搜索文章或问答</string>
    <string name="fragment_search_result_no">未搜索到你想要话题信息，你可以提一个问题让万能的网友帮你回答</string>
    <string name="fragment_search_create_question">+ 创建问题</string>
    <string name="activity_search_result">搜索结果</string>

    <!-- Mine Fragment -->
    <string name="fragment_mine_title">我的</string>
    <string name="fragment_mine_login">点击头像登陆</string>
    <string name="fragment_mine_info">查看或编辑个人资料</string>
    <string name="fragment_mine_follow">我的关注</string>
    <string name="fragment_mine_favorite">我的收藏</string>
    <string name="fragment_mine_answer">我的回答</string>
    <string name="fragment_mine_question">我的提问</string>
    <string name="fragment_mine_updating">检查更新</string>
    <string name="fragment_mine_feedback">意见反馈</string>
    <string name="fragment_mine_push">推送设置</string>
    <string name="fragment_mine_about_us">关于我们</string>

    <!-- login & register -->
    <string name="prompt_user_name">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_confirm_password">再次输入密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="error_invalid_user_name">用户名至少8位</string>
    <string name="error_invalid_old_password">原密码太短</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_password_not_same">两次输入密码不相同</string>
    <string name="error_field_required">用户名不能为空</string>
    <string name="error_user_already_exists">用户名已存在</string>
    <string name="error_user_not_exists">该用户不存在</string>
    <string name="error_network">网络错误</string>
    <string name="login_success">登陆成功</string>
    <string name="action_register">创建新账号</string>
    <string name="action_register_short">注册</string>
    <string name="login_no_account_yet">还没有账号？创建一个</string>
    <string name="login_already_a_member">已经注册？登陆 </string>

    <!-- profile 相关 -->
    <string name="profile">个人信息</string>
    <string name="head_icon">头像</string>
    <string name="username">昵称</string>
    <string name="password">密码</string>
    <string name="change">修改</string>
    <string name="mobile_num">手机</string>
    <string name="mobile_bind">手机号绑定</string>
    <string name="bind">绑定</string>
    <string name="email">邮箱</string>
    <string name="email_bind">邮箱绑定</string>
    <string name="email_text">请填写邮箱地址</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="retype_new_password">再输入</string>
    <string name="change_password">修改密码</string>
    <string name="change_password_success">修改密码成功</string>
    <string name="change_password_failed">修改密码失败</string>
    <string name="phone_86">+86</string>
    <string name="phone">请填写手机号码</string>
    <string name="ping_code">请输入验证码</string>
    <string name="top_bar_save">保存</string>
    <string name="top_bar_confirm">确认</string>
    <string name="logout">退出登陆</string>
    <string name="logout_success">登出成功</string>
    <string name="logout_failed">登出成功</string>
    <string name="login_first">请先登录</string>
    <string name="confirm">确定</string>
    <string name="next_step">下一步</string>
    <string name="verified">已验证</string>
    <string name="not_verified">未验证</string>

    <!-- 拍照上传部分 -->
    <string name="dialog_photo_take_pic">拍照</string>
    <string name="dialog_photo_pick_pic">从手机相册选择</string>
    <string name="dialog_cancel">取消</string>

    <string name="favorite">收藏</string>
    <string name="favoriting">已收藏</string>
    <string name="cancel">取消</string>
    <string name="comment">评论</string>
    <string name="add_comment">添加评论</string>
    <string name="like">赞</string>
    <string name="liking">已赞</string>
    <string name="follow">关注</string>
    <string name="following">已关注</string>
    <string name="add_follow">+ 关注</string>
    <string name="answer_question">添加回答</string>
    <string name="add_question">添加问题</string>
    <string name="answer_num">条回答</string>
    <string name="send_success">发送成功!</string>
    <string name="send_failed">发送失败!</string>
    <string name="answer_title">回答</string>
    <string name="official_title">详情</string>

</resources>
